...

    <ScrollView
        android:id="@+id/sv_filters_as"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/et_min_cost_val"
                android:layout_width="120dp"
                android:layout_height="50dp"
...

            <EditText
                android:id="@+id/et_max_cost_val"
                android:layout_width="120dp"
                android:layout_height="50dp"
...

            <ImageView
                android:id="@+id/btn_choose_locations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:textColor="@android:color/secondary_text_light"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/iv_choose_entry_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_sep_line1_5" />
...

            <RadioGroup
                android:id="@+id/radioGroup_max_rm_as"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <RadioButton
                    android:id="@+id/radio_btn_as_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/et_min_age_val"
                android:layout_width="120dp"
                android:layout_height="50dp"
...
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/iv_sep_line3"
                app:layout_constraintEnd_toStartOf="@+id/et_max_age_val"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toEndOf="@+id/et_min_age_val"
...

            <CheckBox
                android:id="@+id/check_box_smoking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/check_box_pets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/check_box_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <CheckBox
                android:id="@+id/check_box_kosher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

    <ImageView
        android:id="@+id/btn_save_filters_as"
        android:layout_width="500dp"
        android:layout_height="51dp"
...
