...
        <item>Mount Scopus</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="got_it">Got it!</string>
    <string name="or_sign_in_with_google">Or sign in with google</string>
    <string name="create_account_and_sign_in">Create account and sign in</string>
    <string name="preferred_cost_range">Preferred cost range</string>
    <string name="preferred_locations">Preferred locations</string>
    <string name="earliest_entry_date">Earliest entry date</string>
    <string name="max_number_of_roommates_in_total">Max number of roommates in total</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="roommates_age_range">Roommates\' age range</string>
    <string name="_sep_age_range">-</string>
    <string name="things_i_care_about">Things I care about:</string>
    <string name="smoking_free">Smoking free</string>
    <string name="no_pets">No pets</string>
    <string name="ac">AC</string>
    <string name="kosher">Kosher</string>
    <string name="sep_cost_range">-</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="min_age">Min age</string>
    <string name="max_age">Max age</string>
    <string name="show_me_relevant_apartments">Show me relevant apartments</string>
...
